# art

./: Cargo.toml  README.md  flake.nix
demodemonini/: Cargo.toml
demodemonini/src/: main.rs  triangle_grid.rs
demodemonini/src/shaders/: textured.wgsl
heather/: Cargo.toml  heather.glb
heather/src/: main.rs
moonstaff/: Cargo.toml
moonstaff/src/: main.rs  particles.rs
src/: fire.rs  main.rs  pipelines.rs
src/shaders/: postprocess.wgsl  vert_colors.wgsl
