[package]
name = "moonstaff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
starframe = { git = "https://github.com/m0lentum/starframe", rev = "f2561524" }
# for dev:
# starframe = { path = "../../starframe" }
